@@ -29,6 +29,7 @@ export(get.treetext)
 export(ggtree)
 export(gplot)
 export(plot)
+export(read.baseml)
 export(read.beast)
 export(read.codeml)
 export(read.codeml_mlc)
